reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-content__src__schema.rs_line_457_col_9.log

*** crates/tracewake-content/src/schema.rs:457:9: replace InitialBeliefSchema::new_expectation -> Self with Default::default()

*** mutation diff:
--- crates/tracewake-content/src/schema.rs
+++ replace InitialBeliefSchema::new_expectation -> Self with Default::default()
@@ -449,30 +449,17 @@
     pub fn new_expectation(
         belief_id: BeliefId,
         holder_actor_id: ActorId,
         proposition: Proposition,
         confidence: Confidence,
         source: SourceRef,
         acquired_tick: SimTick,
     ) -> Self {
-        Self {
-            belief_id,
-            privacy_scope: PrivacyScope::ActorPrivate(holder_actor_id.clone()),
-            holder_actor_id,
-            proposition,
-            stance: Stance::ExpectsTrue,
-            confidence,
-            source_kind: InitialBeliefSourceKind::AuthoredPrehistory,
-            source,
-            channel: None,
-            acquired_tick,
-            last_verified_tick: None,
-            schema_version: SchemaVersion::new(EPISTEMIC_RECORD_SCHEMA_V1).unwrap(),
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl FixtureSchema {
     pub fn canonicalize(&mut self) {
         self.actors
             .sort_by(|left, right| left.actor_id.cmp(&right.actor_id));
         self.places


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content): couldn't read metadata for file `target/debug/deps/libtracewake_content-052d9f0ddd5654e3.rlib`
   Compiling tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content)
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/tests/../../tracewake-content/src/schema.rs` has changed (1781903737.183925459s, 1s after last build at 1781903736.843925432s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f1a402c06b6200e9 -C extra-filename=-052d9f0ddd5654e3 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name hidden_truth_gates --edition=2021 crates/tracewake-core/tests/hidden_truth_gates.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=6827b5805fd85fab -C extra-filename=-499dcae7fdb8d686 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d243c079ea17582c -C extra-filename=-b18457137da16d86 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
warning: unused import: `tracewake_core::epistemics::observation::EPISTEMIC_RECORD_SCHEMA_V1`
 --> crates/tracewake-content/src/schema.rs:7:5
  |
7 | use tracewake_core::epistemics::observation::EPISTEMIC_RECORD_SCHEMA_V1;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `InitialBeliefSchema: Default` is not satisfied
   --> crates/tracewake-content/src/schema.rs:457:9
    |
457 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `InitialBeliefSchema`
   --> crates/tracewake-content/src/schema.rs:332:1
    |
332 | pub struct InitialBeliefSchema {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `schema::InitialBeliefSchema: Default` is not satisfied
   --> crates/tracewake-content/src/schema.rs:457:9
    |
457 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `schema::InitialBeliefSchema`
   --> crates/tracewake-content/src/schema.rs:332:1
    |
332 | pub struct InitialBeliefSchema {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-content` (lib) generated 1 warning
error: could not compile `tracewake-content` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f1a402c06b6200e9 -C extra-filename=-052d9f0ddd5654e3 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-content` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d243c079ea17582c -C extra-filename=-b18457137da16d86 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib` (exit status: 1)

*** result: Failure(101)
